--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# Enable only a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
+# disable dynamic feature before release
+# ref: https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional
+bevy = { version = "0.7", features = ["dynamic"]}
+
